tests/machine/x/cpp/partial_application.mochi.error
line 12: ../../../tests/machine/x/cpp/partial_application.mochi.cpp:12:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   12 | auto add(auto a, auto b) {
      |          ^~~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:12:18: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   12 | auto add(auto a, auto b) {
      |                  ^~~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/partial_application.mochi.cpp:17:20: error: no matching function for call to ‘add(int)’
   17 |     auto add5 = add(5);
      |                 ~~~^~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:12:6: note: candidate: ‘template<class auto:1, class auto:2> auto add(auto:1, auto:2)’
   12 | auto add(auto a, auto b) {
      |      ^~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:12:6: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/partial_application.mochi.cpp:17:20: note:   candidate expects 2 arguments, 1 provided
   17 |     auto add5 = add(5);
      |                 ~~~^~~

 11 | 
 12 | auto add(auto a, auto b) {
 13 |     return (a + b);
